# MailSubsystem

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  env.example  schema.sql
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  design_or_feature.yml
.github/workflows/: ci.yml
docs/: AGENT_SYSTEM.md  ARCHITECTURE.md  DATABASE.md  INDEX.md  SPEND_SAFETY.md  getting-started.md
specs/agents/: digest-agent.md  email-analyzer.md  folder-consolidator.md  location-agent.md  mail-assistant.md  orchestrator.md
specs/skills/: base-conventions.md  email-taxonomy.md  mailbox-digest.md  mailbox-filing.md  skill-memory.md  threat-detection.md
specs/workers/: classification-worker.md  conflict-review-worker.md  digest-worker.md  folder-learning-worker.md  folder-recommendation-worker.md
src/: agent_catalog.rs  agent_execution_runtime.rs  agent_router.rs  ai_provider.rs  attachment_analysis.rs  body_sync_service.rs  cli_parser.rs  core_daemon.rs  core_work_queue.rs  embedding_service.rs  folder_location_agent.rs  imap_client.rs  lib.rs  mailbox_retrieval.rs  mailbox_sync_runtime.rs  main.rs  metrics_sink.rs  model_ref.rs  provider_rate_limit.rs  run_observability.rs  runtime_config.rs  runtime_task_services.rs  spend_safety.rs  worker_runtime.rs
src/agent_harness/: agent_spec.rs  confidence_calibration.rs  mailbox_tools.rs  mod.rs  run_executor.rs  scratchpad_state.rs  tool_registry.rs
src/cli_commands/: agent_cli.rs  analysis_cli.rs  api_cli.rs  command_support.rs  core_runtime_cli.rs  digest_cli.rs  folder_consolidation_cli.rs  folder_location_cli.rs  maintenance_cli.rs  message_lifecycle_cli.rs  mod.rs  scratchpad_hygiene_cli.rs  sync_cli.rs  terminal_ui_cli.rs
src/database/: mod.rs  (+20 more)
(+20 files in other folders)
